# cardano-node-clients

./: .gitignore  404.html  CLAUDE.md  HANDOVER.md  README.md  WIP.md  cabal.project  cardano-node-clients.cabal  flake.nix  index.html  mkdocs.yml  sitemap.xml
.github/workflows/: ci.yml  devnet-image.yml
.specify/memory/: constitution.md
architecture/: index.html
bench/: n2c-throughput.hs
devnet/: Dockerfile  entrypoint.sh
docs/: architecture.md  index.md
docs/inspector/: .gitignore  package-lock.json  package.json  spago.yaml
docs/inspector/src/: Main.purs  Provider.purs  bootstrap.js
docs/inspector/src/FFI/: Blockfrost.js  (+9 more)
docs/modules/: balance.md  txbuild.md
lib/Data/List/: SampleFibonacci.hs
modules/balance/: index.html
modules/n2c/: index.html
modules/provider/: index.html
modules/submitter/: index.html
modules/txbuild/: index.html
nix/: apps.nix  checks.nix  fix-libs.nix  project.nix  wasm-targets.nix  wasm-ui.nix
nix/wasm/: bootstrap-cabal.nix  cabal-project-fragment.nix  default.nix  forks.json  mkCardanoLedgerWasm.nix  overrides.nix  project.nix  truncated-index.nix
nix/wasm/c-libs/: blst.nix  default.nix  libsodium.nix  secp256k1.nix
nix/wasm/ledger-smoke/: cabal-wasm.project
nix/wasm/ledger-smoke/wasm-ledger-smoke/: wasm-ledger-smoke.cabal
nix/wasm/ledger-smoke/wasm-ledger-smoke/app/: Main.hs
nix/wasm/ledger-smoke/wasm-ledger-smoke/src/: WasmLedgerSmoke.hs
nix/wasm/smoke/: cabal-wasm.project  cabal.project
nix/wasm/smoke/wasm-smoke/: wasm-smoke.cabal
nix/wasm/smoke/wasm-smoke/app/: Main.hs
nix/wasm/smoke/wasm-smoke/src/: WasmSmoke.hs
nix/wasm/tx-inspector/: cabal-wasm.project
nix/wasm/tx-inspector/wasm-tx-inspector/: wasm-tx-inspector.cabal
nix/wasm/tx-inspector/wasm-tx-inspector/app/: Main.hs
nix/wasm/tx-inspector/wasm-tx-inspector/src/Conway/: Inspector.hs
scripts/: fetch-tx-cbor.sh
search/: search_index.json
specs/001-chain-populator/: plan.md  spec.md  tasks.md
specs/003-tx-builder-dsl/: data-model.md  plan.md  research.md  spec-design.md  spec.md  survey.md  tasks.md  zoo.md
specs/003-tx-builder-dsl/checklists/: requirements.md
specs/004-mainnet-golden-vectors/: plan.md  spec.md  tasks.md
specs/004-mainnet-golden-vectors/checklists/: requirements.md
specs/005-expand-golden-vectors/: plan.md  spec.md  tasks.md
specs/006-053-surface-eval-failures/: plan.md  spec.md
specs/007-preview-node-1070/: plan.md  spec.md  tasks.md
specs/033-wasm-ledger-inspector/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/033-wasm-ledger-inspector/checklists/: requirements.md
specs/033-wasm-ledger-inspector/contracts/: cli.md  ledger-functional-api.md  nix-api.md
test/: main.hs  unit-main.hs
test/Data/List/: SampleFibonacciSpec.hs
(+24 files in other folders)
