cabal-version: 3.0
name:          wasm-ledger-smoke
version:       0.1.0.0
synopsis:      WASM smoke target exercising cardano-ledger-binary
author:        lambdasistemi
license:       Apache-2.0
build-type:    Simple

library
  exposed-modules:  WasmLedgerSmoke
  hs-source-dirs:   src
  build-depends:    base               >=4.19 && <5
                  , bytestring
                  , cardano-ledger-binary
  default-language: Haskell2010
  ghc-options:      -Wall

executable wasm-ledger-smoke
  main-is:          Main.hs
  hs-source-dirs:   app
  build-depends:    base               >=4.19 && <5
                  , cardano-ledger-binary
                  , wasm-ledger-smoke
  default-language: Haskell2010
  ghc-options:      -Wall
