cabal-version: 3.0
name:          wasm-smoke
version:       0.1.0.0
synopsis:      WASM smoke target for lib.wasm.mkCardanoLedgerWasm
author:        lambdasistemi
license:       Apache-2.0
build-type:    Simple

library
  exposed-modules:  WasmSmoke
  hs-source-dirs:   src
  build-depends:    base               >=4.19 && <5
                  , bytestring
                  , cborg
  default-language: Haskell2010
  ghc-options:      -Wall

executable wasm-smoke
  main-is:          Main.hs
  hs-source-dirs:   app
  build-depends:    base               >=4.19 && <5
                  , wasm-smoke
  default-language: Haskell2010
  ghc-options:      -Wall
